fixing css issue

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visualize Your Sorting</title>
 
-    <link href="css/style.css" rel="stylesheet" />
+    <link href="/Sorting-Visualizer/css/style.css" rel="stylesheet" />
 
 </head> 
 
