--- a/index.html
+++ b/index.html
@@ -16,13 +16,27 @@
 
     <div class="data-container"></div>
 
+    <div id="message"></div>
+
     <div class="button-group">
         <button class="generate" onclick="generateArray()" id="generate">Generate New Array</button>
 
         <button class="sort-button" onclick="selectionSort()" id="selection">Selection Sort</button>
         <button class="sort-button" onclick="bubbleSort()" id="bubble">Bubble Sort</button>
-        <button class="sort-button" onclick="mergeSort()" id="merge">Merge Sort</button>
+        <button class="sort-button" onclick="mergeSort()" id="merge" disabled="true">Merge Sort</button>
         <button class="sort-button" onclick="insertionSort()" id="insertion">Insertion Sort</button>
+    </div>
+
+    <div class="utility">
+        <label for="speed">Select Speed:</label>
+        <select name="speed" id="speed" autocomplete="off">
+            <option value="">--select--</option>
+            <option value="50">3x</option>
+            <option value="150">2x</option>
+            <option value="250">1x</option>
+            <option value="350">0.5x</option>
+            <option value="450">0.1x</option>
+        </select>
     </div>
 
     <script src="script.js"></script>
