--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visualize Your Sorting</title>
 
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="icon" type='image/png' href="/favicon.png">
 
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head> 
 
 <body>
