adding merge sort and fixing bugs

--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
 
         <button class="sort-button" onclick="selectionSort()" id="selection">Selection Sort</button>
         <button class="sort-button" onclick="bubbleSort()" id="bubble">Bubble Sort</button>
-        <button class="sort-button" onclick="mergeSort()" id="merge" disabled="true">Merge Sort</button>
+        <button class="sort-button" onclick="mergeSort()" id="merge">Merge Sort</button>
+        <button class="sort-button" onclick="quickSort()" id="quick">Quick Sort</button>
         <button class="sort-button" onclick="insertionSort()" id="insertion">Insertion Sort</button>
     </div>
 
