--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
         </select>
     </div>
 
+    <div class="footer">
+        <footer>&copy; Copyright 2021 Anirban Das</footer>
+    </div>
+
     <script src="script.js"></script>
 
 </body>
