--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </select>
     </div>
 
-    <div class="footer">
+    <div class="footer" id="footer">
         <footer>&copy; Copyright 2021 Anirban Das</footer>
     </div>
 
